# prophet

./: .gitignore  CMakeLists.txt  Makefile  README.md  claude_analysis.md  codex_analysis.md  eval.properties  move.diff.txt  test.properties  todo.txt
docs/: API.md
include/prophet/: bitmap.h  command.h  commandline.h  const.h  error_codes.h  eval.h  hash.h  init.h  move.h  movegen.h  nn.h  parameters.h  piece.h  position.h  search.h  square.h
include/prophet/position/: move.h  piece.h  position.h  square.h
include/prophet/util/: bitmap.h  error.h  legal.h  output.h  p4time.h  prng.h  select_move.h  string_utils.h
src/: cleanup.c  data.c  init.c  main.c  parameters.h
src/bitmap/: bitmap.h  bitmap_file_rank.c  bitmap_isolate.c  bitmap_lsb.c  bitmap_lsb_msb.c  bitmap_popcnt.c  bitmap_rays.c
src/command/: command.h  command_db.c  command_eval.c  command_exit.c  command_internal.h  command_loop.c  command_no_op.c  command_perft.c  parse_and_execute.c  parse_command.c
src/command/xboard/: block_on_search_thread.c  endgame_check.c  select_move.c  think_and_make_move.c  xboard-internal.h  xboard_force.c  xboard_go.c  xboard_internal.h  xboard_level.c  xboard_memory.c  xboard_move.c  xboard_move_now.c  xboard_new.c  xboard_nopost.c  xboard_ping.c  xboard_post.c  xboard_protover.c  xboard_quit.c  xboard_remove.c  xboard_result.c  xboard_sd.c  xboard_setboard.c  xboard_st.c  xboard_time.c  xboard_undo.c  xboard_usermove.c
src/commandline/: commandline.h  commandline_load_network.c  commandline_load_properties.c  commandline_print_usage.c  commandline_process_options.c  process_commandline_options.c
src/eval/: eval.c  eval_accumulator.c  eval_bishop.c  eval_draw.c  eval_internal.h  eval_king.c  eval_king_safety.c  eval_knight.c  eval_major_on_7th.c  eval_material.c  eval_material_type.c  eval_nonpawn_material.c  eval_pawn.c  eval_phase.c  eval_piece.c  eval_queen.c  eval_rook.c  eval_taper.c  outpost.c  pawn_doubled.c  pawn_isolated.c  pawn_passed.c  pawn_supports.c  trapped_bishop.c
src/hash/: .hash_table.c.swp  hash.c  hash_internal.h  hash_probe.c  hash_store.c  hash_table.c  hash_val.c  hash_zkeys.c
src/movegen/: add_move.c  attack.c  attacked.c  attackers.c  bishop_moves.c  gen_moves_mask.c  get_target_squares.c  good_move.c  king_moves.c  knight_moves.c  movegen.c  movegen_internal.h  movegen_utils.c  pawn_moves.c  perft.c  queen_moves.c  rook_moves.c
src/nn/: load_network.c  neural_network.c  nn_eval.c  nn_internal.h  nnue_accumulators.c
src/position/: add_piece.c  apply_move.c  draw_material.c  draw_rep.c  hash_key.c  move.c  position.c  position.h  position_equals.c  position_flip.c  position_internal.h  remove_piece.c  square.c  square_internal.h  undo_move.c  verify_position.c
src/prophet4/: main.c
src/search/: init_move_ordering.c  iterate.c  mvvlva.c  next.c  qsearch.c  search.c  search_internal.h  see.c  stop.c  stop_search_on_time.c  zugzwang.c
src/util/: bitmap.c  error.c  getopt_compat.c  getopt_compat.h  legal.c  output.c  output.h  p4time.c  posix_compat.c  posix_compat.h  prng.c  prng.h  select_move.c  string_utils.c  string_utils.h  thread_compat.c  thread_compat.h  time.c  time.h
test/: test_globals.h  test_utilities.cpp  testmain.cpp
test/bitmap/: test_bitmap_file_rank.cpp  test_bitmap_isolate.cpp  test_bitmap_lsb.cpp  test_bitmap_lsb_msb.cpp  test_bitmap_popcnt.cpp  test_bitmap_rays.cpp
test/command/: test_command_db.cpp  test_command_exit.cpp  test_command_no_op.cpp  test_command_perft.cpp  test_parse_and_execute.cpp  test_select_move.cpp
test/command/xboard/: test_xboard_force.cpp  test_xboard_go.cpp  test_xboard_level.cpp  test_xboard_memory.cpp  test_xboard_new.cpp  test_xboard_nopost.cpp  test_xboard_ping.cpp  test_xboard_post.cpp  test_xboard_protover.cpp  test_xboard_quit.cpp  test_xboard_remove.cpp  test_xboard_result.cpp  test_xboard_sd.cpp  test_xboard_select_move.cpp  test_xboard_setboard.cpp  test_xboard_setpos.cpp  test_xboard_st.cpp  test_xboard_time.cpp  test_xboard_undo.cpp  test_xboard_usermove.cpp  text_xboard_quit.cpp  text_xboard_undo.cpp
test/commandline/: test_commandline_load_network.cpp  test_commandline_load_properties.cpp
test/eval/: test_eval.cpp  test_eval_accumulator.cpp  test_eval_bishop.cpp  test_eval_draw.cpp  test_eval_king.cpp  test_eval_knight.cpp  test_eval_major_on_7th.cpp  test_eval_material.cpp  test_eval_material_type.cpp  test_eval_nonpawn_material.cpp  test_eval_pawn.cpp  test_eval_phase.cpp  test_eval_piece.cpp  test_eval_queen.cpp  test_eval_rook.cpp  test_eval_scale.cpp  test_eval_taper.cpp  test_king_safety.cpp  test_outpost.cpp  test_pawn_doubled.cpp  test_pawn_isolated.cpp  test_pawn_passed.cpp  test_pawn_supports.cpp  test_trapped_bishop.cpp
test/hash/: .test_hash_table.cpp.swp  test_hash_store_probe.cpp  test_hash_table.cpp  test_hash_val.cpp  test_hash_zkeys.cpp  test_store_probe.cpp  test_zkeys.cpp
test/movegen/: test_attack.cpp  test_attacked.cpp  test_attackers.cpp  test_bishop_moves.cpp  test_good_move.cpp  test_king_moves.cpp  test_knight_moves.cpp  test_movegen.cpp  test_movegen_utils.cpp  test_pawn_moves.cpp  test_perft.cpp  test_queen_moves.cpp  test_rook_moves.cpp
test/nn/: test_load_network.cpp  test_load_neural_network.cpp
test/position/: test_add_piece.cpp  test_apply_move.cpp  test_draw50.cpp  test_draw_material.cpp  test_draw_rep.cpp  test_hash_key.cpp  test_move.cpp  test_pawn_hash_key.cpp  test_piece.cpp  test_pos.cpp  test_pos_equals.cpp  test_position.cpp  test_position_equals.cpp  test_position_flip.cpp  test_remove_piece.cpp  test_square.cpp  test_undo_move.cpp
test/resources/: eval.properties  nn.txt
test/search/: .test_iterate.cpp.swp  test_iterate.cpp  test_mvvlva.cpp  test_next.cpp  test_search.cpp  test_see.cpp  test_zugzwang.cpp
test/util/: stdout_capture.cpp  stdout_capture.h  test_bitmap.cpp  test_legal.cpp  test_paths.cpp  test_paths.h  test_prng.cpp  test_select_move.cpp  test_string_utils.cpp
